// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Share Matches snapshot 1`] = `
<div
  class="mod-share  "
  id="v-share"
>
  <div
    class="container --left"
  >
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota en Facebook"
      type="button"
    >
      <i
        class="com-icon  icon-facebook-filled  "
      />
    </button>
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota en Twitter"
      type="button"
    >
      <i
        class="com-icon  icon-twitter-filled  "
      />
    </button>
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id="whatsAppShareDesktop"
      on=""
      tabindex=""
      title="Compartir la nota en WhatsApp"
      type="button"
    >
      <i
        class="com-icon  icon-whatsapp-filled  "
      />
    </button>
  </div>
  <div
    class="com-line  "
  />
  <div
    class="container --right"
  >
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota por E-mail"
      type="button"
    >
      <i
        class="com-icon  icon-email  "
      />
    </button>
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Ir a los comentarios de la nota"
      type="button"
    >
      <i
        class="com-icon  icon-comment  "
      />
    </button>
  </div>
</div>
`;

exports[`Share Note display comment in false  Matches snapshot 1`] = `
<div
  class="mod-share  "
  id="v-share"
>
  <div
    class="container --left"
  >
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota en Facebook"
      type="button"
    >
      <i
        class="com-icon  icon-facebook-filled  "
      />
    </button>
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota en Twitter"
      type="button"
    >
      <i
        class="com-icon  icon-twitter-filled  "
      />
    </button>
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id="whatsAppShareDesktop"
      on=""
      tabindex=""
      title="Compartir la nota en WhatsApp"
      type="button"
    >
      <i
        class="com-icon  icon-whatsapp-filled  "
      />
    </button>
  </div>
  <div
    class="com-line  "
  />
  <div
    class="container --right"
  >
    <button
      class="com-button --icon"
      data-event=""
      data-section=""
      id=""
      on=""
      tabindex=""
      title="Compartir la nota por E-mail"
      type="button"
    >
      <i
        class="com-icon  icon-email  "
      />
    </button>
  </div>
</div>
`;
